--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(map(lambda budg))\n",
+    "x_values = list(map(lambda budget:))\n",
     "y_values = None"
    ]
   },
