Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "x_values = list(map(lambda budget: scaled_movies['budget']))\n",
-    "y_values = list(map(lambda budget: scaled_movies['budget']))"
+    "y_values = list(map(lambda domgross: scaled_movies['budget']))"
    ]
   },
   {
