--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "x_values = list(map(lambda budget: scaled_movies['budget'], scaled_movies))\n",
+    "x_values = list(map(lambda scaled_movies: scaled_movies['budget'], scaled_movies))\n",
     "y_values = list(map(lambda domgross: scaled_movies['domgross'], scaled_movies))"
    ]
   },
