Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -454,23 +454,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "435.0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180.0\n",
+      "435.0\n"
+     ]
     }
    ],
    "source": [
     "print(regression_formula(100)) # 180.0\n",
-    "print(regression_formula(250) # 435.0"
+    "print(regression_formula(250))\n",
+    "# 435.0"
    ]
   },
   {
