--- a/index.ipynb
+++ b/index.ipynb
@@ -759,7 +759,7 @@
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    actual = y_actual(x, x_values, y_values)\n",
-    "    "
+    "    regression = "
    ]
   },
   {
