--- a/index.ipynb
+++ b/index.ipynb
@@ -825,7 +825,8 @@
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
     "    return dict(marker = {'color':'red'}\n",
-    "                mode = )"
+    "                mode = 'lines\n",
+    "                name = ')"
    ]
   },
   {
