--- a/index.ipynb
+++ b/index.ipynb
@@ -828,7 +828,7 @@
     "                mode = 'lines, \n",
     "                name = 'error at '+x, \n",
     "                x = [x, x]\n",
-    "                y = [y_actual(x, x_values, y_values), ])"
+    "                y = [y_actual(x, x_values, y_values), x])"
    ]
   },
   {
