Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,8 +1139,8 @@
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    return dict(marker = {'color':'red'}, \n",
     "                mode = 'lines', \n",
-    "                name = 'error at '+ str(x_value), \n",
-    "                x = [x, x], \n",
+    "                name = 'error at '+ str(x_values), \n",
+    "                x = [x_values, x], \n",
     "                y = [y_actual(x, x_values, y_values), m*x + b])"
    ]
   },
