--- a/index.ipynb
+++ b/index.ipynb
@@ -1137,7 +1137,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    return list(map(lambdict(marker = {'color':'red'}, \n",
+    "    return list(map(lambda dict(marker = {'color':'red'}, \n",
     "                mode = 'lines', \n",
     "                name = 'error at '+ str(x_values), \n",
     "                x = [x_values, x_values], \n",
