--- a/index.ipynb
+++ b/index.ipynb
@@ -1141,7 +1141,7 @@
     "                                                          mode = 'lines', \n",
     "                                                          name = 'error at '+ str(x_values), \n",
     "                                                          x = [x_values, x_values], \n",
-    "                                                        y = [y_actual(x_values, x_values, y_values), m*x_values + b])"
+    "                                                          y = [y_actual(x_values, x_values, y_values), m*x_values + b]),"
    ]
   },
   {
