--- a/index.ipynb
+++ b/index.ipynb
@@ -1137,7 +1137,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x_values, y_values, m, b"
+    "    return list(map(lambda :x_values, y_values, m, b)"
    ]
   },
   {
