--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1138,7 +1138,7 @@
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    \n",
-    "    return list(map(lambda :)"
+    "    return "
    ]
   },
   {
