--- a/index.ipynb
+++ b/index.ipynb
@@ -1138,7 +1138,7 @@
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    x = []\n",
-    "    error_line = error_line_trace(x_values, y_values, m)\n",
+    "    error_line = error_line_trace(x_values, y_values, m, b, x)\n",
     "    return list(map(lambda :)"
    ]
   },
