--- a/index.ipynb
+++ b/index.ipynb
@@ -1132,14 +1132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-35-77b62168404d>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-77b62168404d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return list(map(lambda x: error_line(x), x_values)\u001b[0m\n\u001b[0m                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    x = []\n",
     "    error_line = error_line_trace(x_values, y_values, m, b, x)\n",
-    "    return list(map(lambda x: error_line(x), x_values)"
+    "    return list(map(lambda x: error_line(x), x_values))"
    ]
   },
   {
