--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,7 +1139,7 @@
     "def error_line_traces(x_values, y_values, m, b):\n",
     "    x = []\n",
     "    error_line = error_line_trace(x_values, y_values, m, b, x)\n",
-    "    return list(map(lambda x: error_line(x), x_values))"
+    "    return list(map(lambda x: error_line_trace(x_values, y_values, m, b, x), x_values))"
    ]
   },
   {
